# Simplex

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.en.md  README.md  README.zh-TW.md  SECURITY.md  Simplex Search.command  THIRD_PARTY_NOTICES.md  crawl4ai_pdf.py  deep_search_tool.py  docker-compose.yml  pro_search_crawl_backend.py  pro_search_crawl_mcp.py  pro_search_mcp.py  pyproject.toml  requirements.txt  simplex
docs/: TECHNICAL_GUIDE.en.md  TECHNICAL_GUIDE.zh-TW.md  pdf-chunk-diagnosis-jas-hkbu.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  offline.html  service-worker.js
frontend/src/: App.tsx  ResearchTracePanel.tsx  SettingsPanel.tsx  api.ts  i18n.ts  researchHistory.ts  researchTrace.ts  styles.css  types.ts
scripts/: docker-entrypoint.sh  doctor.py  install_native.sh  simplex_supervisor.py
searxng/: limiter.toml  settings.yml
simplex_app/: __init__.py  conversation.py  llm.py  main.py  settings.py
tests/: test_chunks_and_citations.py  test_conversation_context.py  test_crawl_and_resources.py  test_external_module_loading.py  test_input_and_payload.py  test_pdf_helper.py  test_public_parameter_boundaries.py  test_reviewer_resilience.py  test_search_budget_and_urls.py  test_searxng_routing.py  test_security_boundaries.py  test_simplex_app.py  test_simplex_supervisor.py
