[project]
name = "simplex-research"
version = "0.1.0"
description = "以 SearXNG、可替換搜尋供應商與深爬證據鏈驅動的開源研究工具"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["study"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
